# fastapi-template

./: README.md  main.py  pyproject.toml
app/: crud.py  dependencies.py  main.py  schemas.py
app/dependency/: repository.py  request.py  usecase.py
app/domain/item/: item.py  item_repository.py
app/domain/user/: user.py  user_repository.py
app/infrastructure/item/: item_dto.py  item_repository.py
app/infrastructure/repository/: base.py  user.py
app/infrastructure/user/: user_dto.py  user_repository.py
app/presentation/form/: item.py  user.py
app/presentation/routers/: items.py  users.py
app/routers/: items.py  users.py
app/usecase/: user.py
sql_app/: database.py  main.py  models.py
